fix: welcome message align

--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,13 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .section-container{
-    width: 1100px;
+    width: 1100px;  
 }
+
 /* components section end*/
 
 /* #main-section css section start*/
@@ -90,7 +92,7 @@ button{
 
 #main-section .container.welcome{
     width: 500px;
-    height: 216px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
